--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ As digital project designers and consumers, we value the ability to be criticall
 
 <div class="top">
 
-<img src="https://www.nam.ac.uk/sites/default/files/2020-06/111393_full.jpg'" alt="A private of the 8th West India Regiment">
+<img src="west_indies_private.png'" alt="A private of the 8th West India Regiment">
 
 </body>
 
