--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@ As digital project designers and consumers, we value the ability to be criticall
 <p>The overall intent of this project is to examine how Black people in Africa and the Caribbean (particularly Jamaica) were treated by colonizers in times of war and tension and examine the psychological and cultural effects. One significant theme is the discrimination of Black allies and soldiers by white colonizers. We wish to give a voice to those peoples, but we also know that as we are not them, there are many challenges in lifting their experiences and perspectives high accurately. We can never truly understand where they are coming from, but that does not mean that it is not worth it to try. As working with collaborators is beyond the scope of the project, we have searched for primary sources to help us form an idea of what Black people in particular times and situations encountered. However, we wish to note that our sampling of sources is small and demonstrate the views of a few people and in no way spans the total experience of colonial and post-colonial times in Black Africa and Black Jamaica. In addition, though we wish to focus on Black primary sources and in this way highlight their voices, unfortunately little has been made digitally accessible from the perspective of the colonized. To help fill in gaps, we have also pulled from scholarly articles and British periodicals but instead of using them as main content pieces will instead frame them beside our primary sources to compare differences and similarities as well as using it as a tool to demonstrate biases that can occur in such mediums.</p>
 
 <div class="top">
-
-<img src="images/west_indies_private.jpg" alt="A private of the 8th West India Regiment">
+  
+  <img src="images/west_indies_private.jpg" alt="A private of the 8th West India Regiment">
+  
+</div>
 
 </body>
 
